// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncompleteListButtons complete and edit are disabled when user is not owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-disabled btn btn-link"
      data-test-id="incomplete-list-complete"
      disabled=""
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      aria-disabled="true"
      class="p-0 me-3 list-button-disabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/id1/edit"
      style="pointer-events: none;"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons complete and edit are enabled when user is owner 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/id1/edit"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons edit is hidden when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <i
        class="fa fa-compress-alt fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons merge is displayed when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <i
        class="fa fa-compress-alt fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is disabled when user does not have write permissions 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      aria-disabled="true"
      class="p-0 me-3 list-button-disabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
      style="pointer-events: none;"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/id1/edit"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is enabled when user has write permissions and not multiSelect 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-share"
      href="/id1/users_lists"
    >
      <i
        class="fa fa-users fa-2x text-primary"
      />
    </a>
    <a
      aria-disabled="false"
      class="p-0 me-3 list-button-enabled"
      data-discover="true"
      data-test-id="incomplete-list-edit"
      href="/id1/edit"
    >
      <i
        class="fa fa-edit fa-2x text-warning"
      />
    </a>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;

exports[`IncompleteListButtons share is hidden when multiSelect and selectedLists > 1 1`] = `
<div>
  <div
    class="float-end btn-group"
    role="group"
  >
    <button
      class="p-0 me-3 list-button-enabled btn btn-link"
      data-test-id="incomplete-list-complete"
      type="button"
    >
      <i
        class="fa fa-check fa-2x text-success"
      />
    </button>
    <button
      class="p-0 me-3 btn btn-link"
      data-test-id="incomplete-list-merge"
      type="button"
    >
      <i
        class="fa fa-compress-alt fa-2x text-warning"
      />
    </button>
    <button
      class="p-0 btn btn-link"
      data-test-id="incomplete-list-trash"
      type="button"
    >
      <i
        class="fa fa-trash fa-2x text-danger"
      />
    </button>
  </div>
</div>
`;
